--- a/Fashion Ecommerce Data Visualizations.ipynb
+++ b/Fashion Ecommerce Data Visualizations.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Introduction: Project Goal\n",
     "    \n",
-    "The goal of this project is to visualize ecommerce fashion data. "
+    "The goal of this project is to visualize ecommerce fashion data and use data science methods to understand product classifications and inights."
    ]
   },
   {
